# exper_rust_ffi

./: Cargo.toml  README.md  build.rs
c_lib_in_rust/: Cargo.toml  README.md
cb_channel/: Cargo.toml  README.md
cb_channel/src/: main.rs
cee_struct/: Cargo.toml  README.md
cee_struct/src/: cee_struct.c  cee_struct.h  main.rs
omnibus/: Cargo.toml  README.md  build.output.txt  build.rs  omnibus
omnibus/src/: lib.rs  omnibus.c
src/: cee_struct_bindings.rs.not-ok  lib.rs  main.rs
